--- a/train_vision_transformer.ipynb
+++ b/train_vision_transformer.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A complete Hugging Face tutorial: how to build and train a vision transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This article serves as an all-in tutorial of the Hugging Face ecosystem. We will explore the different libraries developed by the Hugging Face team such as transformers and datasets. We will see how they can be used to develop and train transformers with minimum boilerplate code. To better elaborate the basic concepts, we will showcase the entire pipeline of building and training a Vision Transformer (ViT).\n",
+    "\n",
+    "I assume that you already are familiar with the architecture so we won’t analyze much about it. A few things to remember are:\n",
+    "\n",
+    "1. In ViT, we represent an image as a sequence of patches .\n",
+    "\n",
+    "1. The architecture resembles the original Transformer from the famous “Attention is all you need” paper.\n",
+    "\n",
+    "1. The model is trained using a labeled dataset following a fully-supervised paradigm.\n",
+    "\n",
+    "1. It is usually fine-tuned on the downstream dataset for image classification.\n",
+    "\n",
+    "If you are interested in a holistic view of the ViT architecture, visit one of our previous articles on the topic: [How the Vision Transformer (ViT) works in 10 minutes: an image is worth 16x16 words.](https://theaisummer.com/vision-transformer/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
