--- a/PITA_Training_the_Vision_Transformer.ipynb
+++ b/PITA_Training_the_Vision_Transformer.ipynb
@@ -66,31 +66,31 @@
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/huggingface/transformers\n",
-            "  Cloning https://github.com/huggingface/transformers to /tmp/pip-req-build-sysrepgy\n",
-            "  Running command git clone -q https://github.com/huggingface/transformers /tmp/pip-req-build-sysrepgy\n",
+            "  Cloning https://github.com/huggingface/transformers to /tmp/pip-req-build-xhp66zjq\n",
+            "  Running command git clone -q https://github.com/huggingface/transformers /tmp/pip-req-build-xhp66zjq\n",
             "  Installing build dependencies ... \u001b[?25ldone\n",
             "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
             "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
             "\u001b[?25hRequirement already satisfied (use --upgrade to upgrade): transformers==4.22.0.dev0 from git+https://github.com/huggingface/transformers in /transformers/src\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (3.7.1)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (1.22.4)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (2.28.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (5.4.1)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (4.64.0)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (2022.7.25)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (21.3)\n",
             "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (0.8.1)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (1.22.4)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (2022.7.25)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (3.7.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (2.28.1)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (5.4.1)\n",
             "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (0.12.1)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (2022.6.15)\n",
-            "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (2.1.0)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (1.26.11)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (3.3)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/dist-packages (from transformers==4.22.0.dev0) (4.64.0)\n",
             "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.8/dist-packages (from packaging>=20.0->transformers==4.22.0.dev0) (3.0.9)\n",
             "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.8/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers==4.22.0.dev0) (4.3.0)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (3.3)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (1.26.11)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (2022.6.15)\n",
+            "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.8/dist-packages (from requests->transformers==4.22.0.dev0) (2.1.0)\n",
             "Building wheels for collected packages: transformers\n",
             "  Building wheel for transformers (PEP 517) ... \u001b[?25ldone\n",
-            "\u001b[?25h  Created wheel for transformers: filename=transformers-4.22.0.dev0-py3-none-any.whl size=4680065 sha256=1fd02ef0d738dab5b28618d29c760695a9292dc9842ba1eb2cce1743ae86727f\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-ri28y8uw/wheels/42/68/45/c63edff61c292f2dfd4df4ef6522dcbecc603e7af82813c1d7\n",
+            "\u001b[?25h  Created wheel for transformers: filename=transformers-4.22.0.dev0-py3-none-any.whl size=4680065 sha256=a896295c82bcbfee73344c8faf7dc9104ffdbd13af204f501c199163b6d43771\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-iqx8b6_v/wheels/42/68/45/c63edff61c292f2dfd4df4ef6522dcbecc603e7af82813c1d7\n",
             "Successfully built transformers\n"
           ]
         }
@@ -136,34 +136,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "kgn-a3NiSjqR"
-      },
-      "outputs": [],
-      "source": [
-        "import torchvision\n",
-        "from torchvision import transforms\n",
-        "\n",
-        "Transform = transforms.Compose([transforms.Resize(size=(224, 224)), transforms.ToTensor()])\n",
-        "\n",
-        "\n",
-        "train_ds = torchvision.datasets.ImageFolder('/root/vit/data/train', transform=Transform)\n",
-        "valid_ds = torchvision.datasets.ImageFolder('/root/vit/data/valid/', transform=Transform)\n",
-        "test_ds = torchvision.datasets.ImageFolder('/root/vit/data/test/', transform=Transform)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
         {
           "data": {
             "text/plain": [
               "Dataset ImageFolder\n",
-              "    Number of datapoints: 630\n",
-              "    Root location: /root/vit/data/train\n",
+              "    Number of datapoints: 16944\n",
+              "    Root location: /root/vit/PETA\n",
               "    StandardTransform\n",
               "Transform: Compose(\n",
               "               Resize(size=(224, 224), interpolation=bilinear, max_size=None, antialias=None)\n",
@@ -171,13 +160,68 @@
               "           )"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import torchvision\n",
+        "from torchvision import transforms\n",
+        "import torch\n",
+        "\n",
+        "Transform = transforms.Compose([transforms.Resize(size=(224, 224)), transforms.ToTensor()])\n",
+        "Full_Dataset = torchvision.datasets.ImageFolder('/root/vit/PETA', transform=Transform)\n",
+        "Full_Dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_ds, valid_ds = torch.utils.data.random_split(Full_Dataset,[14000, (16944-14000)] )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<torch.utils.data.dataset.Subset at 0x7f483c5a2910>"
+            ]
+          },
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "train_ds"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<torch.utils.data.dataset.Subset at 0x7f483c5a2700>"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "valid_ds"
       ]
     },
     {
@@ -200,13 +244,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
         "## variables settings\n",
         "\n",
-        "Num_Lables = 3\n",
+        "Num_Lables = 2\n",
         "Pre_Trained_Model = 'google/vit-base-patch16-224-in21k'\n",
         "ViT_Feature_Extractor = 'google/vit-base-patch16-224-in21k'\n",
         "EPOCHS = 30\n",
@@ -218,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {
         "id": "cGDrb1Q4ToLN"
       },
@@ -272,15 +316,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "cuda\n",
-            "True\n"
+            "cpu\n",
+            "False\n"
           ]
         }
       ],
