--- a/PITA_Training_the_Vision_Transformer.ipynb
+++ b/PITA_Training_the_Vision_Transformer.ipynb
@@ -445,7 +445,99 @@
             "Epoch:  0 | train loss: 0.3634 | test accuracy: 0.84\n",
             "Epoch:  0 | train loss: 0.1481 | test accuracy: 0.97\n",
             "Epoch:  0 | train loss: 0.2167 | test accuracy: 0.91\n",
-            "Epoch:  0 | train loss: 0.1752 | test accuracy: 0.91\n"
+            "Epoch:  0 | train loss: 0.1752 | test accuracy: 0.91\n",
+            "Epoch:  0 | train loss: 0.1769 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  1 | train loss: 0.2370 | test accuracy: 0.94\n",
+            "Epoch:  1 | train loss: 0.2647 | test accuracy: 0.91\n",
+            "Epoch:  1 | train loss: 0.3281 | test accuracy: 0.84\n",
+            "Epoch:  1 | train loss: 0.2147 | test accuracy: 0.88\n",
+            "Epoch:  1 | train loss: 0.3344 | test accuracy: 0.88\n",
+            "Epoch:  1 | train loss: 0.2812 | test accuracy: 0.84\n",
+            "Epoch:  1 | train loss: 0.1745 | test accuracy: 0.97\n",
+            "Epoch:  1 | train loss: 0.0938 | test accuracy: 0.97\n",
+            "Epoch:  1 | train loss: 0.2296 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  2 | train loss: 0.1575 | test accuracy: 0.94\n",
+            "Epoch:  2 | train loss: 0.3238 | test accuracy: 0.88\n",
+            "Epoch:  2 | train loss: 0.1553 | test accuracy: 0.94\n",
+            "Epoch:  2 | train loss: 0.2450 | test accuracy: 0.88\n",
+            "Epoch:  2 | train loss: 0.2432 | test accuracy: 0.91\n",
+            "Epoch:  2 | train loss: 0.1399 | test accuracy: 0.97\n",
+            "Epoch:  2 | train loss: 0.0517 | test accuracy: 1.00\n",
+            "Epoch:  2 | train loss: 0.0787 | test accuracy: 0.97\n",
+            "Epoch:  2 | train loss: 0.2136 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  3 | train loss: 0.1212 | test accuracy: 0.94\n",
+            "Epoch:  3 | train loss: 0.1605 | test accuracy: 0.94\n",
+            "Epoch:  3 | train loss: 0.2017 | test accuracy: 0.94\n",
+            "Epoch:  3 | train loss: 0.3190 | test accuracy: 0.88\n",
+            "Epoch:  3 | train loss: 0.0274 | test accuracy: 1.00\n",
+            "Epoch:  3 | train loss: 0.0320 | test accuracy: 1.00\n",
+            "Epoch:  3 | train loss: 0.2632 | test accuracy: 0.91\n",
+            "Epoch:  3 | train loss: 0.4724 | test accuracy: 0.91\n",
+            "Epoch:  3 | train loss: 0.1119 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  4 | train loss: 0.2362 | test accuracy: 0.94\n",
+            "Epoch:  4 | train loss: 0.2754 | test accuracy: 0.94\n",
+            "Epoch:  4 | train loss: 0.2456 | test accuracy: 0.91\n",
+            "Epoch:  4 | train loss: 0.0320 | test accuracy: 1.00\n",
+            "Epoch:  4 | train loss: 0.1813 | test accuracy: 0.94\n",
+            "Epoch:  4 | train loss: 0.3968 | test accuracy: 0.91\n",
+            "Epoch:  4 | train loss: 0.1849 | test accuracy: 0.97\n",
+            "Epoch:  4 | train loss: 0.1040 | test accuracy: 0.94\n",
+            "Epoch:  4 | train loss: 0.6116 | test accuracy: 0.88\n",
+            "Error\n",
+            "Epoch:  5 | train loss: 0.0840 | test accuracy: 0.97\n",
+            "Epoch:  5 | train loss: 0.0526 | test accuracy: 0.97\n",
+            "Epoch:  5 | train loss: 0.3347 | test accuracy: 0.88\n",
+            "Epoch:  5 | train loss: 0.1285 | test accuracy: 0.94\n",
+            "Epoch:  5 | train loss: 0.4108 | test accuracy: 0.88\n",
+            "Epoch:  5 | train loss: 0.1857 | test accuracy: 0.97\n",
+            "Epoch:  5 | train loss: 0.3609 | test accuracy: 0.94\n",
+            "Epoch:  5 | train loss: 0.0398 | test accuracy: 0.97\n",
+            "Epoch:  5 | train loss: 0.3417 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  6 | train loss: 0.2106 | test accuracy: 0.97\n",
+            "Epoch:  6 | train loss: 0.0763 | test accuracy: 0.94\n",
+            "Epoch:  6 | train loss: 0.3713 | test accuracy: 0.94\n",
+            "Epoch:  6 | train loss: 0.1516 | test accuracy: 0.94\n",
+            "Epoch:  6 | train loss: 0.0504 | test accuracy: 0.97\n",
+            "Epoch:  6 | train loss: 0.6300 | test accuracy: 0.84\n",
+            "Epoch:  6 | train loss: 0.0198 | test accuracy: 1.00\n",
+            "Epoch:  6 | train loss: 0.3526 | test accuracy: 0.91\n",
+            "Epoch:  6 | train loss: 0.0262 | test accuracy: 1.00\n",
+            "Error\n",
+            "Epoch:  7 | train loss: 0.6401 | test accuracy: 0.88\n",
+            "Epoch:  7 | train loss: 0.0221 | test accuracy: 1.00\n",
+            "Epoch:  7 | train loss: 0.5931 | test accuracy: 0.88\n",
+            "Epoch:  7 | train loss: 0.4518 | test accuracy: 0.91\n",
+            "Epoch:  7 | train loss: 0.4569 | test accuracy: 0.88\n",
+            "Epoch:  7 | train loss: 0.2883 | test accuracy: 0.94\n",
+            "Epoch:  7 | train loss: 0.1983 | test accuracy: 0.97\n",
+            "Epoch:  7 | train loss: 0.3629 | test accuracy: 0.91\n",
+            "Epoch:  7 | train loss: 0.2721 | test accuracy: 0.94\n",
+            "Error\n",
+            "Epoch:  8 | train loss: 0.0924 | test accuracy: 0.97\n",
+            "Epoch:  8 | train loss: 0.0084 | test accuracy: 1.00\n",
+            "Epoch:  8 | train loss: 0.0029 | test accuracy: 1.00\n",
+            "Epoch:  8 | train loss: 0.2934 | test accuracy: 0.94\n",
+            "Epoch:  8 | train loss: 0.4046 | test accuracy: 0.94\n",
+            "Epoch:  8 | train loss: 0.2696 | test accuracy: 0.94\n",
+            "Epoch:  8 | train loss: 0.5904 | test accuracy: 0.88\n",
+            "Epoch:  8 | train loss: 0.1178 | test accuracy: 0.97\n",
+            "Epoch:  8 | train loss: 0.0018 | test accuracy: 1.00\n",
+            "Error\n",
+            "Epoch:  9 | train loss: 0.0092 | test accuracy: 1.00\n",
+            "Epoch:  9 | train loss: 0.2300 | test accuracy: 0.97\n",
+            "Epoch:  9 | train loss: 0.4649 | test accuracy: 0.88\n",
+            "Epoch:  9 | train loss: 0.3821 | test accuracy: 0.94\n",
+            "Epoch:  9 | train loss: 0.6228 | test accuracy: 0.84\n",
+            "Epoch:  9 | train loss: 0.2675 | test accuracy: 0.91\n",
+            "Epoch:  9 | train loss: 0.1851 | test accuracy: 0.97\n",
+            "Epoch:  9 | train loss: 0.5986 | test accuracy: 0.84\n",
+            "Epoch:  9 | train loss: 0.0028 | test accuracy: 1.00\n",
+            "Error\n"
           ]
         }
       ],
@@ -548,6 +640,15 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
+        "\n",
+        "import torchvision\n",
+        "from torchvision import transforms\n",
+        "import torch\n",
+        "\n",
+        "Transform = transforms.Compose([transforms.Resize(size=(224, 224)), transforms.ToTensor()])\n",
+        "Full_Dataset = torchvision.datasets.ImageFolder('/root/vit/PETA', transform=Transform)\n",
+        "Full_Dataset\n",
+        "\n",
         "EVAL_BATCH = 1\n",
         "eval_loader  = data.DataLoader(valid_ds, batch_size=EVAL_BATCH, shuffle=True, num_workers=4) \n",
         "# Disable grad\n",
@@ -596,13 +697,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "x4S-BcSI2v88"
       },
       "outputs": [],
       "source": [
-        "torch.save(model, '/content/model.pt')"
+        "torch.save(model, 'model.pt')"
       ]
     },
     {
@@ -653,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -668,7 +769,7 @@
               "ViTForImageClassification(\n",
               "  (vit): ViTModel(\n",
               "    (embeddings): ViTEmbeddings(\n",
-              "      (patch_embeddings): PatchEmbeddings(\n",
+              "      (patch_embeddings): ViTPatchEmbeddings(\n",
               "        (projection): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
               "      )\n",
               "      (dropout): Dropout(p=0.0, inplace=False)\n",
@@ -690,6 +791,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -713,6 +815,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -736,6 +839,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -759,6 +863,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -782,6 +887,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -805,6 +911,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -828,6 +935,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -851,6 +959,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -874,6 +983,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -897,6 +1007,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -920,6 +1031,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -943,6 +1055,7 @@
               "          )\n",
               "          (intermediate): ViTIntermediate(\n",
               "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (intermediate_act_fn): GELUActivation()\n",
               "          )\n",
               "          (output): ViTOutput(\n",
               "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
@@ -960,19 +1073,17 @@
               "    )\n",
               "  )\n",
               "  (dropout): Dropout(p=0.1, inplace=False)\n",
-              "  (classifier): Linear(in_features=768, out_features=3, bias=True)\n",
+              "  (classifier): Linear(in_features=768, out_features=2, bias=True)\n",
               ")"
             ]
           },
-          "execution_count": 11,
-          "metadata": {
-            "tags": []
-          },
+          "execution_count": 12,
+          "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "MODEL_PATH = '/content/model.pt'\n",
+        "MODEL_PATH = 'model.pt'\n",
         "model = torch.load(MODEL_PATH)\n",
         "model.eval()"
       ]
